# aimmoPost/app/views/__init__.py
@@ -40,6 +40,7 @@ def register_swagger(app):
         board_id_scheme = {"type": "string", "in": "path", "name": "board_id"}
         post_id_scheme = {"type": "string", "in": "path", "name": "post_id"}
         comment_id_scheme = {"type": "string", "in": "path", "name": "comment_id"}
+        recomment_id_scheme = {"type": "string", "in": "path", "name": "recomment_id"}
         page_scheme = {"type": "integer", "in": "query", "name": "page"}
         size_scheme = {"type": "integer", "in": "query", "name": "size"}
 
@@ -47,10 +48,11 @@ def register_swagger(app):
         spec.components.parameter(component_id="board_id", component=board_id_scheme, location='path')
         spec.components.parameter(component_id="post_id", component=post_id_scheme, location='path')
         spec.components.parameter(component_id="comment_id", component=comment_id_scheme, location='path')
+        spec.components.parameter(component_id="recomment_id", component=recomment_id_scheme, location='path')
         spec.components.parameter(component_id="page", component=page_scheme, location='query')
         spec.components.parameter(component_id="size", component=size_scheme, location='query')
 
-        spec.tag({"boards": "boards", "posts": "posts", "users": "users"})
+        spec.tag({"boards": "boards", "posts": "posts", "users": "users", "recomments": "recomments"})
 
 
         with open('./app/static/swagger.json', 'w', encoding='utf-8') as make_file:
